--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 tags
+
+#local massive json files
+JsonAsText/
+Posts.json
+Tags.json
+Votes.json
